[bdist_wheel]
universal = 1

[metadata]
name = plaster_pastedeploy
version = 1.0
author = Hunter Senft-Grupp
author_email = pylons-discuss@googlegroups.com
description = A loader implementing the PasteDeploy syntax to be used by plaster.
keywords =
    plaster
    pastedeploy
    plaster_pastedeploy
    ini
    config
    egg
url = https://github.com/Pylons/plaster_pastedeploy
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
license_files = LICENSE.txt

[options]
package_dir =
     = src
packages = find:
zip_safe = False
install_requires =
    PasteDeploy >= 2.0
    plaster >= 0.5
include_package_data = True
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
plaster.loader_factory =
    file+ini=plaster_pastedeploy:Loader
    egg=plaster_pastedeploy:Loader
    pastedeploy=plaster_pastedeploy:Loader
    pastedeploy+ini=plaster_pastedeploy:Loader
    pastedeploy+egg=plaster_pastedeploy:Loader
plaster.wsgi_loader_factory =
    file+ini=plaster_pastedeploy:Loader
    egg=plaster_pastedeploy:Loader
    pastedeploy=plaster_pastedeploy:Loader
    pastedeploy+ini=plaster_pastedeploy:Loader
    pastedeploy+egg=plaster_pastedeploy:Loader

[options.extras_require]
testing = pytest; pytest-cov

[check-manifest]
ignore =
    .gitignore
    PKG-INFO
    *.egg-info
    *.egg-info/*
ignore-default-rules = true
ignore-bad-ideas =
    tests/**
